#28 Refactoring in preparation of functionality to clear the environment
It looks really like I wrote this code with a Java 1.4 mindset. I might
have discarded the ProcessBuilder at the time, because it didn't solve the
whole problem (i.e. dealing with IO-streams). Now I got rid of the
code to deal with the ugly `String[]` they required.